# django-common-files

./: README.rst  setup.cfg
common_files/: apps.py  utils.py
common_files/admin/: __init__.py  active_tabular_inline.py  base.py  timestamp.py  timestamp_active.py
common_files/filters/: __init__.py  start_time.py
common_files/models/: __init__.py  base.py  timestamp.py  timestamp_weekday_hour.py  timestamp_weekday_hour_start_end.py
common_files/tests/: __init__.py  active_tabular_inline.py  add.py  base.py  start_time.py  timestamp.py  timestamp_active.py  timestamp_create.py  timestamp_create_view.py  utils.py
common_files/views/: __init__.py  add.py  timestamp.py
