# setup.cfg

[metadata]
name = django-common-files
version = 0.1
description = Files to support developing Django apps.
long_description = file: README.rst
url = https://github.com/4sfc/django-common-files
author = J Wokaty
author_email = jwokaty@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.5.3
install_requires =
    Django >= 2.2
